DNAnexus Upload Agent 1.2.11 <support@dnanexus.com>, 2013-May-3
---------------------------------------------------------------
  * [PTFM-6706] Use c-ares's ares_gethostbyname() to resolve ip address explicitly
  * Round robin DNS also works on windows
  * Some minor changes

DNAnexus Upload Agent 1.2.10 <support@dnanexus.com>, 2013-May-1
---------------------------------------------------------------
  * [PTFM-6706] UA now uses gethostbyname to do explicit DNS round robin
    (only for Linux & Mac versions).
  * [PTFM-6669] Uploading files >2GB should work on windows now.
  * UA should exit normally  when --help is used.
  * Fix for "file" command on old system (since they lack --mime-type flag)
  * Windows version will remain on libcurl 7.27 (UA with 7.30 fails to make libcurl
    requests properly for some reason). For that relaxed the relevant condition in main.cpp
  * Various other minor fixes

DNAnexus Upload Agent 1.2.9 <support@dnanexus.com>, 2013-Apr-22
---------------------------------------------------------------
  * Minor bug fix

DNAnexus Upload Agent 1.2.8 <support@dnanexus.com>, 2013-Apr-22
---------------------------------------------------------------
  * [PTFM-7251] SIGPIPE bug fix (UA crashed mysteriously sometime with exit code: 141)
  * Using libcurl version 7.30 (forcing UA to use >= 7.30, so that we ensure that we make transition on all platforms)
    Also --version flag now prints Boost and libcurl versions
  * Capping maximum number of (default) compress threads to 8
  * Support for DX_LIBCURL_VERBOSE is added
  * More detailed error message is read from libcurl when /UPLOAD request fails
  * chunk::log() now accepts level as a configurable param
  * Setting CURLOPT_TIMEOUT to unlimited (0) in /UPLOAD route too

DNAnexus Upload Agent 1.2.7 <support@dnanexus.com>, 2013-Mar-14
---------------------------------------------------------------
  * Relevant JIRA tickets: PTFM-4459, PTFM-6628, PTFM-6629
  * Compiling UA with "-O3" flag now